Fixed issue where text in the desription and the 'description' label were overlapping.

--- a/src/components/Actions/Actions.module.scss
+++ b/src/components/Actions/Actions.module.scss
@@ -129,7 +129,9 @@
     }
     .form-description {
       margin-top: 12px;
-      // padding-bottom: 150px;
+      label {
+        background-color: white;
+      }
     }
     .form-repeating {
       margin-top: 20px;
